SportsHub.Client/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: sportshubclient
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: sportshubclient
